{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a1f1561d-403e-4c2a-9ceb-4ac8dc70189f",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a16b5f35-5af8-46bc-a577-af97a94e6478",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MenuPause",
                    "type": "Button",
                    "id": "2966054c-6d10-4438-bf03-edede1c18ddc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveUpDpad",
                    "type": "Button",
                    "id": "ac36c132-d011-4e57-8e10-1b1d1e7a5428",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDownDpad",
                    "type": "Button",
                    "id": "b9968f81-29d1-43c7-abd1-43d8f34a9995",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeftDpad",
                    "type": "Button",
                    "id": "99050f76-fc9f-4712-bd1a-0859e2e3c594",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRightDpad",
                    "type": "Button",
                    "id": "325575ac-68fc-43ca-8134-970a84789a39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "abb0f2c3-cd84-4c50-9770-46d3438c22b3",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUpDpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4f09cd6-1418-408a-8db2-3a103be1b5ce",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDownDpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1894eed5-8e34-4465-aac6-816dc02941b2",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftDpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b367be8-aa5d-451e-a1c8-8e1faa8d1909",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightDpad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76826075-8bf8-4c57-a2bf-97eff670a74f",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b4180cf-a126-401f-addc-a4095aa694e0",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}